fix(website): fix flickering cards by removing noise overlay in css & refactor courses data for translation support

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,9 @@
 @layer base {
   * {
     @apply border-border selection:bg-accent/30 selection:text-white;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
   }
 
   html {
@@ -154,7 +157,7 @@
     height: 100%;
     content: "";
     opacity: 0.01;
-    z-index: 9999;
+    z-index: 10;
     pointer-events: none;
     background-image: radial-gradient(#ffffff 1px, transparent 0);
     background-size: 40px 40px;
